--- a/CodingEvents/CodingEvents.csproj
+++ b/CodingEvents/CodingEvents.csproj
@@ -15,6 +15,7 @@
     <None Remove="Microsoft.EntityFrameworkCore.Design" />
     <None Remove="Views\EventCategory\" />
     <None Remove="Views\Tag\" />
+    <None Remove="Areas\Identity\Data\" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Views\Events\" />
@@ -22,11 +23,20 @@
     <Folder Include="ViewModels\" />
     <Folder Include="Views\EventCategory\" />
     <Folder Include="Views\Tag\" />
+    <Folder Include="Areas\Identity\Data\" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="6.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="6.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="6.0">
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="6.0" />
     <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="6.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="6.0.14" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.14">
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
