--- a/CodingEvents/appsettings.json
+++ b/CodingEvents/appsettings.json
@@ -1,4 +1,4 @@
-﻿{
+{
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -7,6 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "server=localhost;userid=root;password=thereisapatt3rn;database=testingMVC2;"
+    "DefaultConnection": "server=localhost;userid=root;password=thereisapatt3rn;database=testingMVC2;",
+    "EventDbContextConnection": "Server=(localdb)\\mssqllocaldb;Database=CodingEvents;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
