--- a/CodingEvents/appsettings.json
+++ b/CodingEvents/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "server=localhost;userid=root;password=thereisapatt3rn;database=testingMVC2;"
+    "DefaultConnection": "server=localhost;userid=testingMVC2;password=testingMVC2;database=testingMVC2;"
   }
 }
