changed login cred

--- a/CodingEvents/appsettings.json
+++ b/CodingEvents/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "server=localhost;userid=root;password=thereisapatt3rn;database=testingMVC2;",
+    "DefaultConnection": "server=localhost;userid=testingMVC2;password=testingMVC2;database=testingMVC2;",
     "EventDbContextConnection": "Server=(localdb)\\mssqllocaldb;Database=CodingEvents;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
